# mailpit-example

./: .gitignore  Dockerfile  README.md  docker-compose.yml
app/: main.py  pyproject.toml  start.sh
